# availability

./: Cargo.toml  readme.md
examples/: basic_usage_from_chrono.rs  basic_usage_from_str.rs  quick_start.rs
src/: availability.rs  crate_parameters.rs  frame.rs  lib.rs  rule.rs  rulebuilder.rs  tests.rs  util.rs  weekdays.rs
