[package]
name = "availability"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Rust library for describing availability of items."
repository = "https://github.com/third-act/availability"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde-xml-rs = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
bitflags = "1.2.1"